--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           node-version: 16
       - name: Restore CI Cache
-        uses: actions/cache@=v2.1.6
+        uses: actions/cache@v2.1.6
         id: cache-restore
         with:
           path: node_modules
